--- a/less/style.less
+++ b/less/style.less
@@ -22,6 +22,7 @@ Base Styles
 html, body {
   font-family: @cr-regular;
   font-weight: 400;
+  color:@cr-darkest;
 }
 
 h1, h2, h3 {
@@ -68,7 +69,7 @@ Navigation
 Search Screen               
 ========================================================================== */
 .container {
-  max-width:1100px;
+  max-width:1600px;
   padding: 80px 0;
   .jumbotron {
     background-color:transparent;
@@ -85,6 +86,20 @@ Search Screen
       line-height:1.333;
     }
   }
+}
+.page-s .bgimg {
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  width: 100%;
+  position:fixed; 
+  z-index: -1;
+  top:0;
+}
+.page-s #bg-12 {
+  background-image: url("../images/02-IMG_9158.jpg");
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
 }
 
 body.cases {
@@ -108,29 +123,54 @@ body.officers {
 Filters
 ========================================================================== */
 .search {
+  width:30%;
+  float:left;
   h2 {
     margin-bottom:1em;
   }
+}
+
+#results-wrapper {
+  width:70%;
+  float:left;
+  background-color:rgba(0,0,0,.7);
+  border:1px solid #000;
+  padding:20px;
 }
 
 ul.tab-selector {
   padding:0;
   margin-bottom:0;
   list-style:none;
-  border-bottom:1px solid lighten(@cr-light,15%);
+  border-bottom:1px solid @cr-highlight;
   position:relative;
   z-index:2;
   li {
+    width:50%;
+    float:left;
     display:inline-block;
-    background-color:@cr-dark;
+    background-color:@cr-darkest;
+    border:1px solid @cr-darkest;
+    border-bottom:none;
     position: relative;
     margin-bottom: -1px;
+    text-align:center;
+    &.officers {
+      border-right:none;
+    }
     a {
       display:block;
-      padding:8px 12px;
+      padding:20px;
       margin-bottom:-1px;
+      font-family:@cr-condensed;
+      font-weight:700;
+      font-size:16px;
       text-transform: uppercase;
-      color:@cr-light;
+      color:@cr-highlight;
+      transition: color .1s ease-in-out;
+      -moz-transition: color .1s ease-in-out;
+      -webkit-transition: color .1s ease-in-out;
+
       &:hover {
         text-decoration:none;
         color:@cr-lightest;
@@ -138,11 +178,9 @@ ul.tab-selector {
     }
 
     &.active {
-      background-color: lighten(@cr-light,25%);
-      border:1px solid lighten(@cr-light,15%);
-      border-bottom:none;
+      background-color: @cr-highlight;
       a { 
-        color: @cr-dark;
+        color: @cr-lightest;
         text-decoration: none;
         
         &:hover {
@@ -154,9 +192,10 @@ ul.tab-selector {
 }
 
 .tab-containers {
-  background-color:lighten(@cr-light,25%);
-  border:1px solid lighten(@cr-light,15%);
+  background-color:@cr-highlight;
+  border:1px solid @cr-darkest;
   border-top:none;
+  border-right: none;
   margin-bottom:2em;
 
   &:after {
@@ -170,6 +209,7 @@ ul.tab-selector {
     font-size:.8em;
     font-weight: bold;
     text-transform: uppercase;
+    display:none;
 
     &:hover {
       cursor:pointer;
@@ -185,19 +225,22 @@ ul.tab-selector {
       content: "Show tags";
     }
   }
+  .search-form {
+    float: left;
+    width:100%;
+    padding: 30px 20px 20px;
+  }
   #tag-group {
-    display:none;
-    background-color: @cr-lightest;
+    display:block;
   }
   .form-group {
     display:inline-block;   
     vertical-align:top;
-    width:32%;
-    padding:16px;
+    width:100%;
     margin-bottom:10px;
 
     &.tags {
-      width:48%;
+      width:100%;
 
       label:not(.option) {
         margin-top:.75em;
@@ -213,21 +256,16 @@ ul.tab-selector {
         display: inline-block;
         text-transform: lowercase;
         font-weight: normal;
-        padding: 4px 6px;
-        background-color:lighten(@cr-light,25%);
-        border:1px solid lighten(@cr-dark,50%);;
-        border-radius: 5px;
+        padding: 4px 6px;        
+        background-color: @cr-lightest;
+        color:@cr-darkest;
+        border:1px solid @cr-lightest;
         line-height: 1;
         font-size:1em;
 
         &:hover {
           cursor:pointer;
-          /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f5f5f5+100 */
-          background: #ffffff; /* Old browsers */
-          background: -moz-linear-gradient(top,  #ffffff 0%, #f5f5f5 100%); /* FF3.6-15 */
-          background: -webkit-linear-gradient(top,  #ffffff 0%,#f5f5f5 100%); /* Chrome10-25,Safari5.1-6 */
-          background: linear-gradient(to bottom,  #ffffff 0%,#f5f5f5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
+          border:1px solid @cr-darkest;
         }
 
         i {
@@ -245,19 +283,29 @@ ul.tab-selector {
       overflow:hidden;
     }
     input[type=checkbox]:checked + .option {
-      background-color: @cr-highlight;
+      background-color:@cr-darkest;
       color:@cr-lightest;
-      border:1px solid #019999;
-
+      border:1px solid @cr-darkest;
+     
       &:hover {
-        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#44aaaa+0,018087+100 */
-        background: #44aaaa; /* Old browsers */
-        background: -moz-linear-gradient(top,  #44aaaa 0%, #018087 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top,  #44aaaa 0%,#018087 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom,  #44aaaa 0%,#018087 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#44aaaa', endColorstr='#018087',GradientType=0 ); /* IE6-9 */
-
+        border:1px solid @cr-lightest;
       }
+    }
+    .chosen-container-single .chosen-single {
+      border-radius:0;
+      border:1px solid @cr-darkest;
+      background:@cr-lightest;
+      padding:8px 0 8px 8px;
+      height:auto;
+    }
+    .chosen-container-single .chosen-single div b {
+      background-position:0px 10px;
+    }
+    .chosen-container-single .chosen-drop {
+      border-radius:0;
+      border:1px solid @cr-darkest;
+      border-top:0;
+      background:@cr-lightest;
     }
   }
   #officer-search-form .form-group {
@@ -265,6 +313,12 @@ ul.tab-selector {
 
     .twitter-typeahead {
         min-width: 100%;
+        border:1px solid @cr-darkest;
+        background-color: @cr-lightest;
+
+        .tt-input, .tt-hint {
+          padding:8px;
+        }
     }
 
     .typeahead {
@@ -330,11 +384,10 @@ Form Elements
 
 .tt-menu {
   width: 600px;
-  margin: 12px 0;
-  padding: 8px 0;
+  margin: 0;
+  padding: 0;
   background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid @cr-darkest;
 }
 
 .tt-suggestion {
@@ -345,7 +398,7 @@ Form Elements
 
 .tt-suggestion:hover {
   cursor: pointer;
-  background: #343434;
+  background: @cr-highlight;
   color: white;
 }
 
@@ -373,9 +426,50 @@ Results
 }
 
 .case {
-  border:1px solid lighten(@cr-light,25%);
-  padding:16px;
+  border:1px solid @cr-darkest;
+  background-color: @cr-lightest;
   margin:0 0 2em;
+
+  .case-payment {
+    padding:20px;
+    background-color:@cr-darkest;
+
+    h2 {
+      color:@cr-lightest;
+      font-family:@cr-condensed;
+    }
+
+    h3 {
+      color:@cr-alert;
+      font-family:@cr-condensed;
+    }
+  }
+
+  .case-description {
+    padding:20px;
+    color:@cr-darkest;
+
+    h4 {      
+      font-family:@cr-condensed;
+    }
+  }
+
+  .case-details {
+    padding:20px;
+  }
+  .case-officers {
+    padding:20px;
+    background-color:@cr-highlight;
+    color:@cr-darkest;
+
+    .police-icon {
+      display:inline-block;
+      width:30px;
+      height:30px;
+      background:url("../images/police-icon.svg") center center no-repeat;
+      background-size:contain;
+    }
+  }
 
   h2 {
     margin-top:0;
@@ -432,14 +526,13 @@ Results
 #cpd-headwrap {
   background-color:rgba(0,0,0,1);
   color:#fff;
-  border-bottom:1px solid rgba(122,122,122,.5);
   line-height: 0;
 }
 #cpd-logo {
   display:inline-block;
   background-image: url("../images/cr-icon.jpg");
   background-size: contain;
-  border-right:1px solid rgba(122,122,122,.5);
+  border:1px solid #000;
   margin-right:1em;
   line-height: 0;
 
@@ -467,12 +560,31 @@ a.cpd-title, a.cpd-title:visited {
   }
 }
 
+a, a:visited {
+  text-decoration: none;
+  color: @cr-highlight;
+}
+a:hover {
+  text-decoration: underline;
+}
+
 .cpd-links {
   a {
     padding:0 1em;
-    border-right:1px solid white;
+    display: block;
+    min-width:100px;
+    line-height: 60px;
+    border:1px solid #000;
+    border-left:0;
+    background-color:@cr-highlight;
+    color:@cr-lightest;
+    font-family:@cr-condensed;
+    font-weight:700;
+    font-size:16px;
+    text-transform:uppercase;
+    text-align: center;
     &:hover {
-      color:lighten(@cr-highlight,10%);
+      background-color:lighten(@cr-highlight,10%);
       text-decoration: none;
     }
   }
@@ -486,24 +598,13 @@ a.cpd-title, a.cpd-title:visited {
     padding: 0;
   }
   li{
-    text-transform:uppercase;
-    display:inline-block;
-    font-weight:bold;
-    line-height:4.5;
+    float:right;
     &:last-of-type{
       a {
-        border-right:none;
+        //border-left:0;
       }
     }
   }
-}
-
-a, a:visited {
-  text-decoration: none;
-  color: @cr-highlight;
-}
-a:hover {
-  text-decoration: underline;
 }
 
 /* ==========================================================================
@@ -511,25 +612,22 @@ Results
 ========================================================================== */
 #home {
 
-  background-color: #000;
-
-
-  #cpd-headwrap {
-    background-color:rgba(0,0,0,.5);
-  }
+  background-color: rgba(0,0,0,1);
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
     color:#fff;
-  }
-
-  #cpd-scrolling {
-    background-color: #000;
   }
 
   .navbar {
     display:none;
+  }
+
+  #the-app {
+    width:100%;
+    min-height:100vh;
+    background-color:rgba(255,255,255,.5);
   }
 
   h1 {
@@ -594,7 +692,7 @@ Results
   }
   #cpd-progress rect {
     height:24px;
-    fill:#bd261d;
+    fill:@cr-highlight;
     /*fill:#000;*/
   }
 
@@ -645,13 +743,13 @@ Results
 
   .block {
     width:100%;
-    text-align:center;
+    text-align:left;
     z-index: 2;
     position:absolute;
   }
 
   .block h3 {
-    font-size: 3.5em;
+    font-size: 3em;
     line-height: 1.15;
     margin-top:2em;
     margin-bottom:0;
@@ -751,6 +849,11 @@ Results
   }
   #bg-11 {
     background-image: url("../images/02-IMG_9158.jpg");
+  }
+  #bg-12 {
+    background-image: url("../images/02-IMG_9158.jpg");
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
   }
   #bg-11-overlay {
     background-color:rgba(0,0,0,.7);
@@ -892,24 +995,6 @@ Results
     }
     .spacer.vh1.half{
       min-height: 25vh;
-    }
-  }
-
-  ul.tab-selector {
-    font-size:.8em;
-  }
-  .tab-containers {
-    .form-group {
-      width:100%;
-      margin-bottom:0;
-      padding-bottom:0;
-
-      &:last-of-type {
-        padding-bottom:16px;
-      }
-    }
-    #tag-toggle {
-      margin-top: 16px;
     }
   }
 }
